--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "proxy-b9-ventas",
+  "name": "proxy-ventas-b9",
   "version": "1.0.0",
-  "description": "Proxy para API de ventas B9",
-  "main": "server.js",
+  "description": "Proxy para API de ventas B9 en Vercel",
+  "main": "api/ventas.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "vercel dev",
+    "build": "echo 'No build needed for serverless functions'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "node-fetch": "^2.6.7"
   },
   "engines": {
